# llmops_course

./: README.md  pyproject.toml
00_intro/: README.md
02_setup/: README.md
03_LLM_intro/: README.md  llm_intro.ipynb
04_pydanticai_fundamentals/: pydanticai_pydantic_model.ipynb
04_pydanticai_structured_output/: README.md  pydanticai_pydantic_model.ipynb
05_pydanticai_fastapi/: README.md  movies_api.py
06_pydanticai_chatbot/: README.md
06_pydanticai_fastapi_chatbot/: README.md  api.py  chat_agent.py  chat_eda.ipynb
07_mlflow_llm_judge/: README.md
08_mlflow_fastapi_pydanticai/: README.md
08_mlflow_fastapi_pydanticai/src/customer_support/backend/: api.py
08_pydanticai_rags/: README.md
08_pydanticai_rags/backend/: data_models.py  rag.py
09_azure_intro/: README.md
09_lancedb/: README.md
10_deploy_rag_azure/ragbit/src/ragbit/: docker-compose.yaml
11_docker_containerization/ragbit/: pyproject.toml
11_docker_containerization/ragbit/src/ragbit/backend/: Dockerfile  pyproject.toml  rag.py
11_docker_containerization/ragbit/src/ragbit/frontend/: Dockerfile  app.py  pyproject.toml
11_docker_containerization/ragbit/src/ragbit/knowledge_base/articles.lance/_transactions/: 1-7e520145-41b1-4ea0-92cf-d62ca95068e7.txn  10-3e53c088-2760-4080-ad43-1cf8dbb3abe9.txn  11-694395a1-c923-486c-9e2c-191a9fa2e80d.txn  2-9f295ff7-04de-443e-8509-7591ffe040cd.txn  4-8eb53478-8bc2-4a59-b344-018f493ee424.txn  5-155aed10-5c81-4e95-80fa-314ce3ab5838.txn  (+3 more)
12_deploy_rag_azure/: README.md
12_docker_containerization/: README.md
exercises/: exercise_0.md
(+3 files in other folders)
