[project]
name = "llmops-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt>=1.23.0",
    "duckdb>=1.5.0",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "pydantic-ai>=1.67.0",
    "uvicorn>=0.41.0",
]
